--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Cocktails</h1>
+  <h1>Cocktails Galooooore</h1>
   <div class="cards-container">
     <div class="card-deck">
 
