updated cloudinary images

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -3,7 +3,7 @@
   <div class="cards d-flex flex-wrap justify-content-center">
     <% @cocktails.each do |cocktail| %>
       <div class="card bg-dark text-white mb-4 mx-3" style="width: 20rem; height: 30rem;">
-        <%= image_tag("exotic.jpg", class: "card-img") %>
+        <%= cl_image_tag cocktail.photo.key, height: 479, width: 320%>
         <div class="card-img-overlay">
           <%= link_to cocktail_path(cocktail) do %>
             <h5 class="card-title"><%= cocktail.name %></h5>
