--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
-
   <h1><%= @cocktail.name %></h1>
+  <%= cl_image_tag @cocktail.photo.key, height: 600, width: 400, class: "cover" %>
+
   <%= link_to "Back to all cocktails", root_path %>
 
   <div class="row">
