--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,12 +1,21 @@
-<div class="container">
-  <h1>Cocktails Galooooore</h1>
-  <div class="cards d-flex flex-wrap justify-content-center">
+<div class="container mt-5">
+  <%= simple_form_for :search, url: root_path, method: :get do |f| %>
+  <div class="search-form-control form-group">
+    <input class="form-control string required" type="text" name="search[query]" id="search_query" />
+    <button name="button" type="submit" class="btn btn-flat">
+      <i class="fas fa-search"></i> Search
+    </button>
+  </div>
+<% end %>
+
+
+  <div class="cards d-flex flex-wrap ml-4">
     <% @cocktails.each do |cocktail| %>
-      <div class="card bg-dark text-white mb-4 mx-3" style="width: 20rem; height: 30rem;">
-        <%= cl_image_tag cocktail.photo.key, height: 479, width: 320%>
-        <div class="card-img-overlay">
+      <div class="card text-white mb-4 mx-3" style="width: 20rem; height: 30rem;">
+        <%= cl_image_tag cocktail.photo.key, height: 481, width: 320, class: "cover" %>
+         <div class="card-img-overlay">
           <%= link_to cocktail_path(cocktail) do %>
-            <h5 class="card-title"><%= cocktail.name %></h5>
+            <h2 class="card-title lato" style="position: absolute; bottom: 0;"><%= cocktail.name %></h2>
           <% end %>
         </div>
       </div>
