--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,44 +1,55 @@
-<div class="container">
-  <h1><%= @cocktail.name %></h1>
-  <%= cl_image_tag @cocktail.photo.key, height: 600, width: 400, class: "cover" %>
-
-  <%= link_to "Back to all cocktails", root_path %>
-
+<div class="container mt-5 d-flex flex-wrap">
   <div class="row">
-    <div class="col-sm-12 col-md-6">
-      <h3>Recipe</h3>
-      <table class="table table-bordered">
-        <tbody>
-          <thead>
-            <th>Ingredient</th>
-            <th>Description</th>
-            <th>Dose</th>
-          </thead>
-          <% @cocktail.doses.each do |dose| %>
-              <td><%= dose.ingredient.name %></td>
-              <td><%= dose.description %></td>
-                <%= link_to dose_path(dose), method: :delete, data: { confirm: "Are you sure?" } do %>
-                  <i class="fa fa-trash destroy_dose"></i>
-                <% end %>
-              </td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
-    <div class="col-sm-12 col-md-6">
+    <div class="col">
+      <%= cl_image_tag @cocktail.photo.key, height: 450, width: 300, class: "cover" %>
     </div>
   </div>
-<div class="links p-3">
-        <%= link_to "Back to Recipes", cocktails_path, class: "btn btn-warning" %>
 
-        <%= link_to "Edit Name", edit_cocktail_path(@cocktail), class: "btn btn-warning" %>
+  <div class="col-6">
+    <div class="ml-3">
+      <h1 class="lato" style="display: inline;"><%= @cocktail.name %></h1>
+      <%= link_to "", edit_cocktail_path(@cocktail), class: "far fa-edit ml-3" %>
+      <%= link_to "",
+        cocktail_path(@cocktail),
+        method: :delete,
+        class: "far fa-trash-alt",
+        data: { confirm: "Are you sure?" } %>
+        <h3 class="mt-5 lato">Recipe</h3>
+          <table class="table table-bordered mt-3 mb-4">
+            <tbody>
+              <thead>
+                <th>Ingredient</th>
+                <th>Description</th>
+              </thead>
+              <% @cocktail.doses.each do |dose| %>
+                  <td><%= dose.ingredient.name %></td>
+                  <td><%= dose.description %>
+                    <%= link_to dose_path(dose), method: :delete, data: { confirm: "Are you sure?" } do %>
+                      <i class="fa fa-trash destroy_dose"></i>
+                  </td>
+              <% end %>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+          <div class="links">
+            <%= link_to "Back to all Cocktails", root_path, class: "btn btn-warning" %>
 
-        <%= link_to "Add Ingredients", new_cocktail_dose_path(@cocktail), class: "btn btn-warning" %>
+            <%= link_to "Add Ingredients", new_cocktail_dose_path(@cocktail), class: "btn btn-warning" %>
 
-        <%= link_to "Delete",
-          cocktail_path(@cocktail),
-          method: :delete,
-          class: "btn btn-warning",
-          data: { confirm: "Are you sure?" } %>
-      </div>
+            <%= link_to "Leave a review", new_cocktail_review_path(@cocktail), class: "btn btn-warning" %>
+          </div>
+    </div>
+</div>
+
+<div class="container col-6 ml-0 mt-5 mb-5 p-0">
+  <h2 class="lato">Reviews:</h2>
+    <% @cocktail.reviews.each do |review| %>
+      <p class="mt-3"><%= review.content %></p>
+    <% end %>
+</div>
+
+
+
+
+
