--- a/app/assets/rails-stylesheets-master/components/_cards.scss
+++ b/app/assets/rails-stylesheets-master/components/_cards.scss
@@ -2,3 +2,20 @@
     margin-top: 30px;
     padding: 15px;
   }
+
+  .lato {
+    font-family: 'Lato', sans-serif;
+  }
+
+  .card-title {
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+    font-size: 25px;
+  }
+
+  .links {
+    display:inline;
+    position: absolute;
+    bottom: 0;
+  }
