nav & footer colour updated

--- a/app/assets/rails-stylesheets-master/components/_footer.scss
+++ b/app/assets/rails-stylesheets-master/components/_footer.scss
@@ -5,7 +5,7 @@
   align-items: center;
   height: 50px;
   padding: 0px 50px;
-  background: #e7e5df;
+  background: #fcfafa;
   color: rgba(0, 0, 0, 0.3);
   margin-top: -0px;
   justify-content: center;
