--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-light justify-content-between">
+<nav class="navbar justify-content-between">
   <%= link_to root_path do %>
     <i class="fas fa-cocktail"></i>
   <% end %>
